@@ -23,7 +23,7 @@ import com.sun.xml.wss.WSITXMLFactory;
 
 import java.io.ByteArrayInputStream;
 import java.io.ByteArrayOutputStream;
-import java.util.Arrays;
+import java.util.List;
 import java.util.UUID;
 import javax.xml.namespace.QName;
 import javax.xml.parsers.DocumentBuilder;
@@ -45,65 +45,42 @@ public class PolicyUtil {
     }
 
     public static boolean isSecurityPolicyNS(PolicyAssertion pa, SecurityPolicyVersion spVersion) {
-        if ( spVersion.namespaceUri.equals(pa.getName().getNamespaceURI()) ||
-                Constants.MS_SP_NS.equalsIgnoreCase(pa.getName().getNamespaceURI())) {
-            return true;
-        }
-        return false;
+        return spVersion.namespaceUri.equals(pa.getName().getNamespaceURI()) ||
+                Constants.MS_SP_NS.equalsIgnoreCase(pa.getName().getNamespaceURI());
     }
 
     public static boolean isSunPolicyNS(PolicyAssertion pa) {
-        if ( Constants.SUN_WSS_SECURITY_SERVER_POLICY_NS.equals(pa.getName().getNamespaceURI()) ||
-                Constants.SUN_WSS_SECURITY_CLIENT_POLICY_NS.equals(pa.getName().getNamespaceURI())) {
-            return true;
-        }
-        return false;
+        return Constants.SUN_WSS_SECURITY_SERVER_POLICY_NS.equals(pa.getName().getNamespaceURI()) ||
+                Constants.SUN_WSS_SECURITY_CLIENT_POLICY_NS.equals(pa.getName().getNamespaceURI());
     }
 
     public static boolean isAddressingNS(PolicyAssertion pa) {
         if ( AddressingVersion.MEMBER.getNsUri().equals(pa.getName().getNamespaceURI()) ) {
             return true;
         }
-        if ( AddressingVersion.W3C.getNsUri().equals(pa.getName().getNamespaceURI()) ) {
-            return true;
-        }
-        return false;
+        return AddressingVersion.W3C.getNsUri().equals(pa.getName().getNamespaceURI());
     }
 
     public static boolean isTrustNS(PolicyAssertion pa) {
-        if ( Constants.TRUST_NS.equals(pa.getName().getNamespaceURI()) ||
-                Constants.TRUST13_NS.equals(pa.getName().getNamespaceURI())) {
-            return true;
-        }
-        return false;
+        return Constants.TRUST_NS.equals(pa.getName().getNamespaceURI()) ||
+                Constants.TRUST13_NS.equals(pa.getName().getNamespaceURI());
     }
 
     public static boolean isMEXNS(final PolicyAssertion assertion) {
-        if ( Constants.MEX_NS.equals(assertion.getName().getNamespaceURI()) ) {
-            return true;
-        }
-        return false;
+        return Constants.MEX_NS.equals(assertion.getName().getNamespaceURI());
     }
 
     public static boolean isUtilityNS(PolicyAssertion pa) {
-        if ( Constants.UTILITY_NS.equals(pa.getName().getNamespaceURI()) ) {
-            return true;
-        }
-        return false;
+        return Constants.UTILITY_NS.equals(pa.getName().getNamespaceURI());
     }
 
     public static boolean isXpathNS(PolicyAssertion pa) {
-        if ( Constants.XPATH_NS.equals(pa.getName().getNamespaceURI()) ) {
-            return true;
-        }
-        return false;
+        return Constants.XPATH_NS.equals(pa.getName().getNamespaceURI());
     }
 
     public static boolean isAlgorithmAssertion(PolicyAssertion pa, SecurityPolicyVersion spVersion){
         if ( isSecurityPolicyNS(pa, spVersion) ) {
-            if(pa.getName().getLocalPart().equals(Constants.AlgorithmSuite)) {
-                return true;
-            }
+            return pa.getName().getLocalPart().equals(Constants.AlgorithmSuite);
         }
         return false;
     }
@@ -153,10 +130,7 @@ public class PolicyUtil {
             return true;
         }else if(pa.getName().getLocalPart().equals(Constants.RsaToken)){
             return true;
-        }else if(pa.getName().getLocalPart().equals(Constants.KeyValueToken)){
-            return true;
-        }
-        return false;
+        }else return pa.getName().getLocalPart().equals(Constants.KeyValueToken);
     }
 
     public static boolean isBootstrapPolicy(PolicyAssertion assertion, SecurityPolicyVersion spVersion){
@@ -164,10 +138,7 @@ public class PolicyUtil {
             return false;
         }
 
-        if(assertion.getName().getLocalPart().equals(Constants.BootstrapPolicy)) {
-            return true;
-        }
-        return false;
+        return assertion.getName().getLocalPart().equals(Constants.BootstrapPolicy);
     }
 
     public static boolean isTarget(PolicyAssertion assertion, SecurityPolicyVersion spVersion) {
@@ -176,13 +147,10 @@ public class PolicyUtil {
         }
 
         String name = assertion.getName().getLocalPart();
-        if(name.equals(Constants.EncryptedParts) ||
+        return name.equals(Constants.EncryptedParts) ||
                 name.equals(Constants.SignedParts) ||
                 name.equals(Constants.SignedElements) ||
-                name.equals(Constants.EncryptedElements)) {
-            return true;
-        }
-        return false;
+                name.equals(Constants.EncryptedElements);
     }
 
     public static boolean isXPath(PolicyAssertion assertion, SecurityPolicyVersion spVersion ) {
@@ -190,10 +158,7 @@ public class PolicyUtil {
             return false;
         }
 
-        if ( assertion.getName().getLocalPart().equals(Constants.XPath) ) {
-            return true;
-        }
-        return false;
+        return assertion.getName().getLocalPart().equals(Constants.XPath);
     }
 
     public static boolean isXPathFilter20(PolicyAssertion assertion) {
@@ -201,10 +166,7 @@ public class PolicyUtil {
             return false;
         }
 
-        if ( assertion.getName().getLocalPart().equals(Constants.XPathFilter20) ) {
-            return true;
-        }
-        return false;
+        return assertion.getName().getLocalPart().equals(Constants.XPathFilter20);
     }
 
     public static boolean isRequiredKey(PolicyAssertion assertion) {
@@ -231,10 +193,7 @@ public class PolicyUtil {
             return true;
         } else if ( assertion.getName().getLocalPart().equals(Constants.WssX509Pkcs7Token11)) {
             return true;
-        } else if ( assertion.getName().getLocalPart().equals(Constants.WssX509PkiPathV1Token11)) {
-            return true;
-        }
-        return false;
+        } else return assertion.getName().getLocalPart().equals(Constants.WssX509PkiPathV1Token11);
     }
 
     public static boolean isTokenReferenceType(PolicyAssertion assertion, SecurityPolicyVersion spVersion) {
@@ -249,10 +208,7 @@ public class PolicyUtil {
             return true;
         } else if ( assertion.getName().getLocalPart().equals(Constants.RequireEmbeddedTokenReference)) {
             return true;
-        } else if ( assertion.getName().getLocalPart().equals(Constants.RequireIssuerSerialReference)) {
-            return true;
-        }
-        return false;
+        } else return assertion.getName().getLocalPart().equals(Constants.RequireIssuerSerialReference);
     }
 
     public static boolean isUsernameTokenType(PolicyAssertion assertion, SecurityPolicyVersion spVersion) {
@@ -260,27 +216,19 @@ public class PolicyUtil {
             return false;
         }
 
-        if(assertion.getName().getLocalPart().equals(Constants.WssUsernameToken10) ||
-                assertion.getName().getLocalPart().equals(Constants.WssUsernameToken11)) {
-            return true;
-        }
-        return false;
+        return assertion.getName().getLocalPart().equals(Constants.WssUsernameToken10) ||
+                assertion.getName().getLocalPart().equals(Constants.WssUsernameToken11);
     }
 
     public static boolean useCreated(PolicyAssertion assertion, SecurityPolicyVersion spVersion) {
-       if(assertion.getName().getLocalPart().equals(Constants.Created)
-               /*&& spVersion.namespaceUri.equals(SP13_NS)*/) {
-            return true;
-        }
-       return false;
+        /*&& spVersion.namespaceUri.equals(SP13_NS)*/
+        return assertion.getName().getLocalPart().equals(Constants.Created);
     }
 
     public static boolean useNonce(PolicyAssertion assertion, SecurityPolicyVersion spVersion) {
-        if(assertion.getName().getLocalPart().equals(Constants.Nonce) /*&&
-                spVersion.namespaceUri.equals(SP13_NS)*/) {
-            return true;
-        }
-       return false;
+        /*&&
+                spVersion.namespaceUri.equals(SP13_NS)*/
+        return assertion.getName().getLocalPart().equals(Constants.Nonce);
     }
 
     public static boolean isHttpsToken(PolicyAssertion assertion, SecurityPolicyVersion spVersion) {
@@ -288,10 +236,7 @@ public class PolicyUtil {
             return false;
         }
 
-        if(assertion.getName().getLocalPart().equals(Constants.HttpsToken)) {
-            return true;
-        }
-        return false;
+        return assertion.getName().getLocalPart().equals(Constants.HttpsToken);
     }
 
     public static boolean isSecurityContextToken(PolicyAssertion token, SecurityPolicyVersion spVersion) {
@@ -299,10 +244,7 @@ public class PolicyUtil {
             return false;
         }
 
-        if(token.getName().getLocalPart().equals(Constants.SecurityContextToken)) {
-            return true;
-        }
-        return false;
+        return token.getName().getLocalPart().equals(Constants.SecurityContextToken);
     }
 
     public static boolean isSecurityContextTokenType(PolicyAssertion token, SecurityPolicyVersion spVersion) {
@@ -310,10 +252,7 @@ public class PolicyUtil {
             return false;
         }
         String localPart = token.getName().getLocalPart();
-        if(localPart.equals(Constants.SC10SecurityContextToken)) {
-            return true;
-        }
-        return false;
+        return localPart.equals(Constants.SC10SecurityContextToken);
     }
 
     public static boolean isKerberosToken(PolicyAssertion token, SecurityPolicyVersion spVersion) {
@@ -321,10 +260,7 @@ public class PolicyUtil {
             return false;
         }
 
-        if(token.getName().getLocalPart().equals(Constants.KerberosToken)) {
-            return true;
-        }
-        return false;
+        return token.getName().getLocalPart().equals(Constants.KerberosToken);
     }
 
     public static boolean isKerberosTokenType(PolicyAssertion token, SecurityPolicyVersion spVersion) {
@@ -334,10 +270,7 @@ public class PolicyUtil {
         String localPart = token.getName().getLocalPart();
         if(localPart.equals(Constants.WssKerberosV5ApReqToken11)) {
             return true;
-        }else if(localPart.equals(Constants.WssGssKerberosV5ApReqToken11)){
-            return true;
-        }
-        return false;
+        }else return localPart.equals(Constants.WssGssKerberosV5ApReqToken11);
     }
 
     public static boolean isKeyValueTokenType(PolicyAssertion token, SecurityPolicyVersion spVersion){
@@ -345,11 +278,8 @@ public class PolicyUtil {
             return false;
         }
         String localPart = token.getName().getLocalPart();
-        if(localPart.equals(Constants.RsaKeyValue) && SecurityPolicyVersion.SECURITYPOLICY12NS.namespaceUri.equals(
-                spVersion.namespaceUri)){
-            return true;
-        }
-        return false;
+        return localPart.equals(Constants.RsaKeyValue) && SecurityPolicyVersion.SECURITYPOLICY12NS.namespaceUri.equals(
+                spVersion.namespaceUri);
     }
 
     public static boolean isRelToken(PolicyAssertion token, SecurityPolicyVersion spVersion) {
@@ -357,10 +287,7 @@ public class PolicyUtil {
             return false;
         }
 
-        if(token.getName().getLocalPart().equals(Constants.RelToken)) {
-            return true;
-        }
-        return false;
+        return token.getName().getLocalPart().equals(Constants.RelToken);
     }
 
     public static boolean isRelTokenType(PolicyAssertion token, SecurityPolicyVersion spVersion) {
@@ -368,14 +295,15 @@ public class PolicyUtil {
             return false;
         }
         String localPart = token.getName().getLocalPart();
-        if(localPart.equals(Constants.WssRelV10Token10)) {
-            return true;
-        }else if(localPart.equals(Constants.WssRelV10Token11)){
-            return true;
-        }else if(localPart.equals(Constants.WssRelV20Token10)){
-            return true;
-        }else if(localPart.equals(Constants.WssRelV20Token11)){
-            return true;
+        switch (localPart) {
+            case Constants.WssRelV10Token10:
+                return true;
+            case Constants.WssRelV10Token11:
+                return true;
+            case Constants.WssRelV20Token10:
+                return true;
+            case Constants.WssRelV20Token11:
+                return true;
         }
         return false;
     }
@@ -385,10 +313,7 @@ public class PolicyUtil {
             return false;
         }
 
-        if(assertion.getName().getLocalPart().equals(Constants.IncludeTimestamp)) {
-            return true;
-        }
-        return false;
+        return assertion.getName().getLocalPart().equals(Constants.IncludeTimestamp);
     }
 
     public static boolean disableTimestampSigning(PolicyAssertion assertion) {
@@ -396,10 +321,7 @@ public class PolicyUtil {
             return false;
         }
 
-        if(assertion.getName().getLocalPart().equals(Constants.DisableTimestampSigning)){
-            return true;
-        }
-        return false;
+        return assertion.getName().getLocalPart().equals(Constants.DisableTimestampSigning);
     }
 
     public static boolean isEncryptBeforeSign(PolicyAssertion assertion, SecurityPolicyVersion spVersion) {
@@ -407,10 +329,7 @@ public class PolicyUtil {
             return false;
         }
 
-        if(assertion.getName().getLocalPart().equals(Constants.EncryptBeforeSigning)) {
-            return true;
-        }
-        return false;
+        return assertion.getName().getLocalPart().equals(Constants.EncryptBeforeSigning);
     }
 
     public static boolean isSignBeforeEncrypt(PolicyAssertion assertion, SecurityPolicyVersion spVersion) {
@@ -418,10 +337,7 @@ public class PolicyUtil {
             return false;
         }
 
-        if(assertion.getName().getLocalPart().equals(Constants.SignBeforeEncrypting)) {
-            return true;
-        }
-        return false;
+        return assertion.getName().getLocalPart().equals(Constants.SignBeforeEncrypting);
     }
 
     public static boolean isContentOnlyAssertion(PolicyAssertion assertion, SecurityPolicyVersion spVersion) {
@@ -429,10 +345,7 @@ public class PolicyUtil {
             return false;
         }
 
-        if(assertion.getName().getLocalPart().equals(Constants.OnlySignEntireHeadersAndBody)) {
-            return true;
-        }
-        return false;
+        return assertion.getName().getLocalPart().equals(Constants.OnlySignEntireHeadersAndBody);
     }
 
     public static boolean isMessageLayout(PolicyAssertion assertion, SecurityPolicyVersion spVersion) {
@@ -440,10 +353,7 @@ public class PolicyUtil {
             return false;
         }
 
-        if(assertion.getName().getLocalPart().equals(Constants.Layout)) {
-            return true;
-        }
-        return false;
+        return assertion.getName().getLocalPart().equals(Constants.Layout);
     }
 
     public static boolean isEncryptParts(PolicyAssertion assertion, SecurityPolicyVersion spVersion ){
@@ -451,10 +361,7 @@ public class PolicyUtil {
             return false;
         }
 
-        if(assertion.getName().getLocalPart().equals(Constants.EncryptedParts)) {
-            return true;
-        }
-        return false;
+        return assertion.getName().getLocalPart().equals(Constants.EncryptedParts);
     }
 
     public static boolean isEncryptedElements(PolicyAssertion assertion, SecurityPolicyVersion spVersion ){
@@ -462,10 +369,7 @@ public class PolicyUtil {
             return false;
         }
 
-        if(assertion.getName().getLocalPart().equals(Constants.EncryptedElements)) {
-            return true;
-        }
-        return false;
+        return assertion.getName().getLocalPart().equals(Constants.EncryptedElements);
     }
 
     public static boolean isSignedParts(PolicyAssertion assertion, SecurityPolicyVersion spVersion){
@@ -473,10 +377,7 @@ public class PolicyUtil {
             return false;
         }
 
-        if(assertion.getName().getLocalPart().equals(Constants.SignedParts)) {
-            return true;
-        }
-        return false;
+        return assertion.getName().getLocalPart().equals(Constants.SignedParts);
     }
 
     public static boolean isSignedElements(PolicyAssertion assertion, SecurityPolicyVersion spVersion){
@@ -484,10 +385,7 @@ public class PolicyUtil {
             return false;
         }
 
-        if(assertion.getName().getLocalPart().equals(Constants.SignedElements)) {
-            return true;
-        }
-        return false;
+        return assertion.getName().getLocalPart().equals(Constants.SignedElements);
     }
 
 
@@ -496,10 +394,7 @@ public class PolicyUtil {
             return false;
         }
 
-        if(policyAssertion.getName().getLocalPart().equals(Constants.SignedSupportingTokens)) {
-            return true;
-        }
-        return false;
+        return policyAssertion.getName().getLocalPart().equals(Constants.SignedSupportingTokens);
     }
 
     public static boolean isEndorsedSupportingToken(PolicyAssertion policyAssertion, SecurityPolicyVersion spVersion) {
@@ -507,10 +402,7 @@ public class PolicyUtil {
             return false;
         }
 
-        if(policyAssertion.getName().getLocalPart().equals(Constants.EndorsingSupportingTokens)) {
-            return true;
-        }
-        return false;
+        return policyAssertion.getName().getLocalPart().equals(Constants.EndorsingSupportingTokens);
     }
 
     public static boolean isSignedEndorsingSupportingToken(PolicyAssertion policyAssertion, SecurityPolicyVersion spVersion) {
@@ -518,10 +410,7 @@ public class PolicyUtil {
             return false;
         }
 
-        if(policyAssertion.getName().getLocalPart().equals(Constants.SignedEndorsingSupportingTokens)) {
-            return true;
-        }
-        return false;
+        return policyAssertion.getName().getLocalPart().equals(Constants.SignedEndorsingSupportingTokens);
     }
 
     public static boolean isSignedEncryptedSupportingToken(PolicyAssertion policyAssertion, SecurityPolicyVersion spVersion) {
@@ -530,11 +419,8 @@ public class PolicyUtil {
         }
 
         // SignedEncryptedSupportingTokens in only supported in SecurityPolicy 1.2 namespace
-        if(policyAssertion.getName().getLocalPart().equals(Constants.SignedEncryptedSupportingTokens) &&
-                policyAssertion.getName().getNamespaceURI().equals(SecurityPolicyVersion.SECURITYPOLICY12NS.namespaceUri)) {
-            return true;
-        }
-        return false;
+        return policyAssertion.getName().getLocalPart().equals(Constants.SignedEncryptedSupportingTokens) &&
+                policyAssertion.getName().getNamespaceURI().equals(SecurityPolicyVersion.SECURITYPOLICY12NS.namespaceUri);
     }
 
     public static boolean isEncryptedSupportingToken(PolicyAssertion policyAssertion, SecurityPolicyVersion spVersion) {
@@ -543,11 +429,8 @@ public class PolicyUtil {
         }
 
         // EncryptedSupportingTokens in only supported in SecurityPolicy 1.2 namespace
-        if(policyAssertion.getName().getLocalPart().equals(Constants.EncryptedSupportingTokens) &&
-                policyAssertion.getName().getNamespaceURI().equals(SecurityPolicyVersion.SECURITYPOLICY12NS.namespaceUri)) {
-            return true;
-        }
-        return false;
+        return policyAssertion.getName().getLocalPart().equals(Constants.EncryptedSupportingTokens) &&
+                policyAssertion.getName().getNamespaceURI().equals(SecurityPolicyVersion.SECURITYPOLICY12NS.namespaceUri);
     }
 
     public static boolean isEndorsingEncryptedSupportingToken(PolicyAssertion policyAssertion, SecurityPolicyVersion spVersion) {
@@ -556,11 +439,8 @@ public class PolicyUtil {
         }
 
         // EndorsingEncryptedSupportingTokens in only supported in SecurityPolicy 1.2 namespace
-        if(policyAssertion.getName().getLocalPart().equals(Constants.EndorsingEncryptedSupportingTokens) &&
-                policyAssertion.getName().getNamespaceURI().equals(SecurityPolicyVersion.SECURITYPOLICY12NS.namespaceUri)) {
-            return true;
-        }
-        return false;
+        return policyAssertion.getName().getLocalPart().equals(Constants.EndorsingEncryptedSupportingTokens) &&
+                policyAssertion.getName().getNamespaceURI().equals(SecurityPolicyVersion.SECURITYPOLICY12NS.namespaceUri);
     }
 
     public static boolean isSignedEndorsingEncryptedSupportingToken(PolicyAssertion policyAssertion, SecurityPolicyVersion spVersion) {
@@ -569,11 +449,8 @@ public class PolicyUtil {
         }
 
         // SignedEndorsingEncryptedSupportingTokens in only supported in SecurityPolicy 1.2 namespace
-        if(policyAssertion.getName().getLocalPart().equals(Constants.SignedEndorsingEncryptedSupportingTokens) &&
-                policyAssertion.getName().getNamespaceURI().equals(SecurityPolicyVersion.SECURITYPOLICY12NS.namespaceUri)) {
-            return true;
-        }
-        return false;
+        return policyAssertion.getName().getLocalPart().equals(Constants.SignedEndorsingEncryptedSupportingTokens) &&
+                policyAssertion.getName().getNamespaceURI().equals(SecurityPolicyVersion.SECURITYPOLICY12NS.namespaceUri);
     }
 
 
@@ -584,13 +461,9 @@ public class PolicyUtil {
         }
 
         String name = policyAssertion.getName().getLocalPart();
-        if(name.equals(Constants.SymmetricBinding) ||
+        return name.equals(Constants.SymmetricBinding) ||
                 name.equals(Constants.AsymmetricBinding) ||
-                name.equals(Constants.TransportBinding)) {
-
-            return true;
-        }
-        return false;
+                name.equals(Constants.TransportBinding);
     }
 
     public static boolean isUsernameToken(PolicyAssertion token, SecurityPolicyVersion spVersion) {
@@ -598,10 +471,7 @@ public class PolicyUtil {
             return false;
         }
 
-        if(token.getName().getLocalPart().equals(Constants.UsernameToken)) {
-            return true;
-        }
-        return false;
+        return token.getName().getLocalPart().equals(Constants.UsernameToken);
     }
 
     public static boolean isSamlToken(PolicyAssertion token, SecurityPolicyVersion spVersion) {
@@ -609,10 +479,7 @@ public class PolicyUtil {
             return false;
         }
 
-        if(token.getName().getLocalPart().equals(Constants.SamlToken)) {
-            return true;
-        }
-        return false;
+        return token.getName().getLocalPart().equals(Constants.SamlToken);
     }
 
     public static boolean isSamlTokenType(PolicyAssertion token, SecurityPolicyVersion spVersion) {
@@ -620,16 +487,17 @@ public class PolicyUtil {
             return false;
         }
         String localPart = token.getName().getLocalPart();
-        if(localPart.equals(Constants.WssSamlV10Token10)) {
-            return true;
-        }else if(localPart.equals(Constants.WssSamlV10Token11)){
-            return true;
-        }else if(localPart.equals(Constants.WssSamlV11Token10)){
-            return true;
-        }else if(localPart.equals(Constants.WssSamlV20Token11)){
-            return true;
-        }else if(localPart.equals(Constants.WssSamlV11Token11)){
-            return true;
+        switch (localPart) {
+            case Constants.WssSamlV10Token10:
+                return true;
+            case Constants.WssSamlV10Token11:
+                return true;
+            case Constants.WssSamlV11Token10:
+                return true;
+            case Constants.WssSamlV20Token11:
+                return true;
+            case Constants.WssSamlV11Token11:
+                return true;
         }
         return false;
     }
@@ -639,10 +507,7 @@ public class PolicyUtil {
             return false;
         }
 
-        if(token.getName().getLocalPart().equals(Constants.IssuedToken)) {
-            return true;
-        }
-        return false;
+        return token.getName().getLocalPart().equals(Constants.IssuedToken);
     }
 
     public static boolean isSecureConversationToken(PolicyAssertion token, SecurityPolicyVersion spVersion) {
@@ -650,10 +515,7 @@ public class PolicyUtil {
             return false;
         }
 
-        if(token.getName().getLocalPart().equals(Constants.SecureConversationToken)) {
-            return true;
-        }
-        return false;
+        return token.getName().getLocalPart().equals(Constants.SecureConversationToken);
     }
 
     public static boolean isX509Token(PolicyAssertion policyAssertion, SecurityPolicyVersion spVersion) {
@@ -661,21 +523,15 @@ public class PolicyUtil {
             return false;
         }
 
-        if(policyAssertion.getName().getLocalPart().equals(Constants.X509Token)) {
-            return true;
-        }
-        return false;
+        return policyAssertion.getName().getLocalPart().equals(Constants.X509Token);
     }
 
     public static boolean isKeyValueToken(PolicyAssertion policyAssertion, SecurityPolicyVersion spVersion) {
         if ( !isSecurityPolicyNS(policyAssertion, spVersion)) {
             return false;
         }
-        if(policyAssertion.getName().getLocalPart().equals(Constants.KeyValueToken) && SecurityPolicyVersion.SECURITYPOLICY12NS.namespaceUri.equals(
-                spVersion.namespaceUri)) {
-            return true;
-        }
-        return false;
+        return policyAssertion.getName().getLocalPart().equals(Constants.KeyValueToken) && SecurityPolicyVersion.SECURITYPOLICY12NS.namespaceUri.equals(
+                spVersion.namespaceUri);
     }
 
     // RsaToken is Microsoft's proprietary assertion
@@ -683,11 +539,8 @@ public class PolicyUtil {
         if ( !isSecurityPolicyNS(policyAssertion, spVersion)) {
             return false;
         }
-        if(policyAssertion.getName().getLocalPart().equals(Constants.RsaToken) && SecurityPolicyVersion.MS_SECURITYPOLICY200507.namespaceUri.equals(
-                spVersion.namespaceUri)) {
-            return true;
-        }
-        return false;
+        return policyAssertion.getName().getLocalPart().equals(Constants.RsaToken) && SecurityPolicyVersion.MS_SECURITYPOLICY200507.namespaceUri.equals(
+                spVersion.namespaceUri);
     }
 
     public static boolean isAsymmetricBinding(PolicyAssertion assertion, SecurityPolicyVersion spVersion){
@@ -695,18 +548,12 @@ public class PolicyUtil {
             return false;
         }
 
-        if(assertion.getName().getLocalPart().equals(Constants.AsymmetricBinding)) {
-            return true;
-        }
-        return false;
+        return assertion.getName().getLocalPart().equals(Constants.AsymmetricBinding);
     }
 
     public static boolean isAsymmetricBinding(QName assertion, SecurityPolicyVersion spVersion){
-        if ( assertion.getLocalPart().equals(Constants.AsymmetricBinding) &&
-                assertion.getNamespaceURI().equals(spVersion.namespaceUri)) {
-            return true;
-        }
-        return false;
+        return assertion.getLocalPart().equals(Constants.AsymmetricBinding) &&
+                assertion.getNamespaceURI().equals(spVersion.namespaceUri);
     }
 
     public static boolean isTransportBinding(PolicyAssertion assertion, SecurityPolicyVersion spVersion){
@@ -714,18 +561,12 @@ public class PolicyUtil {
             return false;
         }
 
-        if(assertion.getName().getLocalPart().equals(Constants.TransportBinding)) {
-            return true;
-        }
-        return false;
+        return assertion.getName().getLocalPart().equals(Constants.TransportBinding);
     }
 
     public static boolean isTransportBinding(QName assertion, SecurityPolicyVersion spVersion){
-        if ( assertion.getLocalPart().equals(Constants.TransportBinding) &&
-                assertion.getNamespaceURI().equals(spVersion.namespaceUri)) {
-            return true;
-        }
-        return false;
+        return assertion.getLocalPart().equals(Constants.TransportBinding) &&
+                assertion.getNamespaceURI().equals(spVersion.namespaceUri);
     }
 
     public static boolean isSymmetricBinding(PolicyAssertion assertion, SecurityPolicyVersion spVersion){
@@ -733,18 +574,12 @@ public class PolicyUtil {
             return false;
         }
 
-        if(assertion.getName().getLocalPart().equals(Constants.SymmetricBinding)) {
-            return true;
-        }
-        return false;
+        return assertion.getName().getLocalPart().equals(Constants.SymmetricBinding);
     }
 
     public static boolean isSymmetricBinding(QName assertion, SecurityPolicyVersion spVersion){
-        if ( assertion.getLocalPart().equals(Constants.SymmetricBinding) &&
-                assertion.getNamespaceURI().equals(spVersion.namespaceUri)) {
-            return true;
-        }
-        return false;
+        return assertion.getLocalPart().equals(Constants.SymmetricBinding) &&
+                assertion.getNamespaceURI().equals(spVersion.namespaceUri);
     }
 
     public static boolean isSupportingTokens(PolicyAssertion assertion, SecurityPolicyVersion spVersion){
@@ -752,13 +587,10 @@ public class PolicyUtil {
             return false;
         }
 
-        if(isSignedSupportingToken(assertion, spVersion) || isEndorsedSupportingToken(assertion, spVersion)||
+        return isSignedSupportingToken(assertion, spVersion) || isEndorsedSupportingToken(assertion, spVersion) ||
                 isSignedEndorsingSupportingToken(assertion, spVersion) || isSupportingToken(assertion, spVersion) ||
                 isSignedEncryptedSupportingToken(assertion, spVersion) || isEncryptedSupportingToken(assertion, spVersion) ||
-                isEndorsingEncryptedSupportingToken(assertion, spVersion) || isSignedEndorsingEncryptedSupportingToken(assertion, spVersion)){
-            return true;
-        }
-        return false;
+                isEndorsingEncryptedSupportingToken(assertion, spVersion) || isSignedEndorsingEncryptedSupportingToken(assertion, spVersion);
     }
 
 
@@ -767,10 +599,7 @@ public class PolicyUtil {
             return false;
         }
 
-        if(assertion.getName().getLocalPart().equals(Constants.SupportingTokens)){
-            return true;
-        }
-        return false;
+        return assertion.getName().getLocalPart().equals(Constants.SupportingTokens);
     }
 
 
@@ -779,10 +608,7 @@ public class PolicyUtil {
             return false;
         }
 
-        if(assertion.getName().getLocalPart().equals(Constants.MustSupportClientChallenge)) {
-            return true;
-        }
-        return false;
+        return assertion.getName().getLocalPart().equals(Constants.MustSupportClientChallenge);
     }
 
     public static boolean isSupportServerChallenge(PolicyAssertion assertion, SecurityPolicyVersion spVersion) {
@@ -790,10 +616,7 @@ public class PolicyUtil {
             return false;
         }
 
-        if(assertion.getName().getLocalPart().equals(Constants.MustSupportServerChallenge)) {
-            return true;
-        }
-        return false;
+        return assertion.getName().getLocalPart().equals(Constants.MustSupportServerChallenge);
     }
 
     public static boolean isWSS10PolicyContent(PolicyAssertion assertion, SecurityPolicyVersion spVersion){
@@ -807,10 +630,7 @@ public class PolicyUtil {
             return true;
         }else if(assertion.getName().getLocalPart().equals(Constants.RequireExternalUriReference)) {
             return true;
-        }else if(assertion.getName().getLocalPart().equals(Constants.RequireEmbeddedTokenReference)) {
-            return true;
-        }
-        return false;
+        }else return assertion.getName().getLocalPart().equals(Constants.RequireEmbeddedTokenReference);
     }
 
     public static boolean isWSS11PolicyContent(PolicyAssertion assertion, SecurityPolicyVersion spVersion){
@@ -830,10 +650,7 @@ public class PolicyUtil {
             return true;
         }else if(assertion.getName().getLocalPart().equals(Constants.RequireExternalUriReference)) {
             return true;
-        }else if(assertion.getName().getLocalPart().equals(Constants.RequireEmbeddedTokenReference)) {
-            return true;
-        }
-        return false;
+        }else return assertion.getName().getLocalPart().equals(Constants.RequireEmbeddedTokenReference);
     }
 
     /**
@@ -845,11 +662,8 @@ public class PolicyUtil {
         }
 
         // RequireClientCertificate as a policy assertion is only supported in SP 1.2 namespace
-        if(assertion.getName().getLocalPart().equals(Constants.RequireClientCertificate) &&
-                assertion.getName().getNamespaceURI().equals(SecurityPolicyVersion.SECURITYPOLICY12NS.namespaceUri)){
-            return true;
-        }
-        return false;
+        return assertion.getName().getLocalPart().equals(Constants.RequireClientCertificate) &&
+                assertion.getName().getNamespaceURI().equals(SecurityPolicyVersion.SECURITYPOLICY12NS.namespaceUri);
     }
 
     /**
@@ -861,11 +675,8 @@ public class PolicyUtil {
         }
 
         // HttpBasicAuthentication as a policy assertion is only supported in SP 1.2 namespace
-        if(assertion.getName().getLocalPart().equals(Constants.HttpBasicAuthentication) &&
-                assertion.getName().getNamespaceURI().equals(SecurityPolicyVersion.SECURITYPOLICY12NS.namespaceUri)){
-            return true;
-        }
-        return false;
+        return assertion.getName().getLocalPart().equals(Constants.HttpBasicAuthentication) &&
+                assertion.getName().getNamespaceURI().equals(SecurityPolicyVersion.SECURITYPOLICY12NS.namespaceUri);
     }
 
     /**
@@ -877,11 +688,8 @@ public class PolicyUtil {
         }
 
         // HttpDigestAuthentication as a policy assertion is only supported in SP 1.2 namespace
-        if(assertion.getName().getLocalPart().equals(Constants.HttpDigestAuthentication) &&
-                assertion.getName().getNamespaceURI().equals(SecurityPolicyVersion.SECURITYPOLICY12NS.namespaceUri)){
-            return true;
-        }
-        return false;
+        return assertion.getName().getLocalPart().equals(Constants.HttpDigestAuthentication) &&
+                assertion.getName().getNamespaceURI().equals(SecurityPolicyVersion.SECURITYPOLICY12NS.namespaceUri);
     }
 
     public static boolean isRequireClientEntropy(PolicyAssertion assertion, SecurityPolicyVersion spVersion) {
@@ -889,10 +697,7 @@ public class PolicyUtil {
             return false;
         }
 
-        if(assertion.getName().getLocalPart().equals(Constants.RequireClientEntropy)) {
-            return true;
-        }
-        return false;
+        return assertion.getName().getLocalPart().equals(Constants.RequireClientEntropy);
     }
 
     public static boolean isRequireServerEntropy(PolicyAssertion assertion, SecurityPolicyVersion spVersion) {
@@ -902,10 +707,7 @@ public class PolicyUtil {
 
         }
 
-        if(assertion.getName().getLocalPart().equals(Constants.RequireServerEntropy)) {
-            return true;
-        }
-        return false;
+        return assertion.getName().getLocalPart().equals(Constants.RequireServerEntropy);
     }
 
     public static boolean isSupportIssuedTokens(PolicyAssertion assertion, SecurityPolicyVersion spVersion) {
@@ -913,10 +715,7 @@ public class PolicyUtil {
             return false;
         }
 
-        if(assertion.getName().getLocalPart().equals(Constants.MustSupportIssuedTokens)) {
-            return true;
-        }
-        return false;
+        return assertion.getName().getLocalPart().equals(Constants.MustSupportIssuedTokens);
     }
 
     public static boolean isRequestSecurityTokenCollection(PolicyAssertion assertion, SecurityPolicyVersion spVersion) {
@@ -924,11 +723,8 @@ public class PolicyUtil {
             return false;
         }
 
-        if(assertion.getName().getLocalPart().equals(Constants.RequireRequestSecurityTokenCollection) &&
-                assertion.getName().getNamespaceURI().equals(SecurityPolicyVersion.SECURITYPOLICY12NS.namespaceUri)) {
-            return true;
-        }
-        return false;
+        return assertion.getName().getLocalPart().equals(Constants.RequireRequestSecurityTokenCollection) &&
+                assertion.getName().getNamespaceURI().equals(SecurityPolicyVersion.SECURITYPOLICY12NS.namespaceUri);
     }
 
     public static boolean isAppliesTo(PolicyAssertion assertion, SecurityPolicyVersion spVersion) {
@@ -936,11 +732,8 @@ public class PolicyUtil {
             return false;
         }
 
-        if(assertion.getName().getLocalPart().equals(Constants.RequireAppliesTo) &&
-                assertion.getName().getNamespaceURI().equals(SecurityPolicyVersion.SECURITYPOLICY12NS.namespaceUri)) {
-            return true;
-        }
-        return false;
+        return assertion.getName().getLocalPart().equals(Constants.RequireAppliesTo) &&
+                assertion.getName().getNamespaceURI().equals(SecurityPolicyVersion.SECURITYPOLICY12NS.namespaceUri);
     }
 
     public static boolean isIssuer(PolicyAssertion assertion, SecurityPolicyVersion spVersion) {
@@ -948,10 +741,7 @@ public class PolicyUtil {
             return false;
         }
 
-        if(assertion.getName().getLocalPart().equals(Constants.Issuer)) {
-            return true;
-        }
-        return false;
+        return assertion.getName().getLocalPart().equals(Constants.Issuer);
     }
 
     public static boolean isIssuerName(PolicyAssertion assertion, SecurityPolicyVersion spVersion) {
@@ -960,21 +750,15 @@ public class PolicyUtil {
         }
 
        // Issuer Name only supported for 1.2 namespace
-        if(assertion.getName().getLocalPart().equals(Constants.IssuerName) &&
-                assertion.getName().getNamespaceURI().equals(SecurityPolicyVersion.SECURITYPOLICY12NS.namespaceUri)) {
-            return true;
-        }
-        return false;
+        return assertion.getName().getLocalPart().equals(Constants.IssuerName) &&
+                assertion.getName().getNamespaceURI().equals(SecurityPolicyVersion.SECURITYPOLICY12NS.namespaceUri);
     }
 
     public static boolean isWSS10(PolicyAssertion assertion, SecurityPolicyVersion spVersion){
         if ( !isSecurityPolicyNS(assertion, spVersion)) {
             return false;
         }
-        if(assertion.getName().getLocalPart().equals(Constants.Wss10)) {
-            return true;
-        }
-        return false;
+        return assertion.getName().getLocalPart().equals(Constants.Wss10);
     }
 
     public static boolean isWSS11(PolicyAssertion assertion, SecurityPolicyVersion spVersion){
@@ -982,10 +766,7 @@ public class PolicyUtil {
             return false;
         }
 
-        if(assertion.getName().getLocalPart().equals(Constants.Wss11)) {
-            return true;
-        }
-        return false;
+        return assertion.getName().getLocalPart().equals(Constants.Wss11);
     }
 
     public static boolean isTrust10(PolicyAssertion assertion, SecurityPolicyVersion spVersion){
@@ -994,11 +775,8 @@ public class PolicyUtil {
         }
 
         // Trust10 assertion is allowed only in 2005/07 namespace
-        if(assertion.getName().getLocalPart().equals(Constants.Trust10) &&
-                assertion.getName().getNamespaceURI().equals(SecurityPolicyVersion.SECURITYPOLICY200507.namespaceUri)) {
-            return true;
-        }
-        return false;
+        return assertion.getName().getLocalPart().equals(Constants.Trust10) &&
+                assertion.getName().getNamespaceURI().equals(SecurityPolicyVersion.SECURITYPOLICY200507.namespaceUri);
     }
 
     public static boolean isTrust13(PolicyAssertion assertion, SecurityPolicyVersion spVersion){
@@ -1007,11 +785,8 @@ public class PolicyUtil {
         }
 
         // Trust13 assertion is allowed only in 1.2  namespace
-        if(assertion.getName().getLocalPart().equals(Constants.Trust13) &&
-                assertion.getName().getNamespaceURI().equals(SecurityPolicyVersion.SECURITYPOLICY12NS.namespaceUri)) {
-            return true;
-        }
-        return false;
+        return assertion.getName().getLocalPart().equals(Constants.Trust13) &&
+                assertion.getName().getNamespaceURI().equals(SecurityPolicyVersion.SECURITYPOLICY12NS.namespaceUri);
     }
 
         public static boolean isMustNotSendCancel(PolicyAssertion assertion, SecurityPolicyVersion spVersion){
@@ -1020,12 +795,9 @@ public class PolicyUtil {
         }
 
         // MustNotSendCancel assertion is allowed only in 1.2  namespace
-        if(assertion.getName().getLocalPart().equals(Constants.MustNotSendCancel) &&
-                assertion.getName().getNamespaceURI().equals(SecurityPolicyVersion.SECURITYPOLICY12NS.namespaceUri)) {
-            return true;
+            return assertion.getName().getLocalPart().equals(Constants.MustNotSendCancel) &&
+                    assertion.getName().getNamespaceURI().equals(SecurityPolicyVersion.SECURITYPOLICY12NS.namespaceUri);
         }
-        return false;
-    }
 
     public static boolean isMustNotSendRenew(PolicyAssertion assertion, SecurityPolicyVersion spVersion){
         if ( !isSecurityPolicyNS(assertion, spVersion)) {
@@ -1033,11 +805,8 @@ public class PolicyUtil {
         }
 
         // MustNotSendCancel assertion is allowed only in 1.2  namespace
-        if(assertion.getName().getLocalPart().equals(Constants.MustNotSendRenew) &&
-                assertion.getName().getNamespaceURI().equals(SecurityPolicyVersion.SECURITYPOLICY12NS.namespaceUri)) {
-            return true;
-        }
-        return false;
+        return assertion.getName().getLocalPart().equals(Constants.MustNotSendRenew) &&
+                assertion.getName().getNamespaceURI().equals(SecurityPolicyVersion.SECURITYPOLICY12NS.namespaceUri);
     }
 
     public static boolean isBody(PolicyAssertion assertion, SecurityPolicyVersion spVersion){
@@ -1045,10 +814,7 @@ public class PolicyUtil {
             return false;
         }
 
-        if(assertion.getName().getLocalPart().equals(Constants.Body)){
-            return true;
-        }
-        return false;
+        return assertion.getName().getLocalPart().equals(Constants.Body);
     }
 
     public static boolean isAttachments(PolicyAssertion assertion, SecurityPolicyVersion spVersion){
@@ -1056,11 +822,8 @@ public class PolicyUtil {
             return false;
         }
         // sp:Attachments assertion is allowed only in 1.2  namespace
-        if(assertion.getName().getLocalPart().equals(Constants.Attachments) &&
-                assertion.getName().getNamespaceURI().equals(SecurityPolicyVersion.SECURITYPOLICY12NS.namespaceUri)) {
-            return true;
-        }
-        return false;
+        return assertion.getName().getLocalPart().equals(Constants.Attachments) &&
+                assertion.getName().getNamespaceURI().equals(SecurityPolicyVersion.SECURITYPOLICY12NS.namespaceUri);
     }
 
     public static boolean isAttachmentCompleteTransform(PolicyAssertion assertion, SecurityPolicyVersion spVersion){
@@ -1068,11 +831,8 @@ public class PolicyUtil {
             return false;
         }
         // sp:AttachmentCompleteSignatureTransform assertion is allowed only in 1.2  namespace
-        if(assertion.getName().getLocalPart().equals(Constants.AttachmentCompleteSignatureTransform) &&
-                assertion.getName().getNamespaceURI().equals(SecurityPolicyVersion.SECURITYPOLICY12NS.namespaceUri)) {
-            return true;
-        }
-        return false;
+        return assertion.getName().getLocalPart().equals(Constants.AttachmentCompleteSignatureTransform) &&
+                assertion.getName().getNamespaceURI().equals(SecurityPolicyVersion.SECURITYPOLICY12NS.namespaceUri);
     }
 
     public static boolean isAttachmentContentTransform(PolicyAssertion assertion, SecurityPolicyVersion spVersion){
@@ -1080,11 +840,8 @@ public class PolicyUtil {
             return false;
         }
         // sp:ContentSignatureTransform assertion is allowed only in 1.2  namespace
-        if(assertion.getName().getLocalPart().equals(Constants.ContentSignatureTransform) &&
-                assertion.getName().getNamespaceURI().equals(SecurityPolicyVersion.SECURITYPOLICY12NS.namespaceUri)) {
-            return true;
-        }
-        return false;
+        return assertion.getName().getLocalPart().equals(Constants.ContentSignatureTransform) &&
+                assertion.getName().getNamespaceURI().equals(SecurityPolicyVersion.SECURITYPOLICY12NS.namespaceUri);
     }
 
     public static boolean isRequireDerivedKeys(PolicyAssertion assertion, SecurityPolicyVersion spVersion ) {
@@ -1092,10 +849,7 @@ public class PolicyUtil {
             return false;
         }
 
-        if ( Constants.RequireDerivedKeys.toString().equals(assertion.getName().getLocalPart().toString())) {
-            return true;
-        }
-        return false;
+        return Constants.RequireDerivedKeys.equals(assertion.getName().getLocalPart());
     }
 
     public static AlgorithmSuiteValue isValidAlgorithmSuiteValue(PolicyAssertion assertion, SecurityPolicyVersion spVersion) {
@@ -1144,10 +898,7 @@ public class PolicyUtil {
             return false;
         }
 
-        if ( assertion.getName().getLocalPart().equals(Constants.InclusiveC14N)) {
-            return true;
-        }
-        return false;
+        return assertion.getName().getLocalPart().equals(Constants.InclusiveC14N);
 
     }
 
@@ -1156,10 +907,7 @@ public class PolicyUtil {
         if(!isSunPolicyNS(assertion)){
             return false;
         }
-        if ( assertion.getName().getLocalPart().equals(Constants.InclusiveC14NWithComments)) {
-            return true;
-        }
-        return false;
+        return assertion.getName().getLocalPart().equals(Constants.InclusiveC14NWithComments);
     }
 
     public static boolean isInclusiveC14NWithCommentsForTransforms(PolicyAssertion assertion ) {
@@ -1168,8 +916,7 @@ public class PolicyUtil {
             return false;
         }
         if ( assertion.getName().getLocalPart().equals(Constants.InclusiveC14NWithComments)) {
-            if("true".equals(assertion.getAttributeValue(new QName(Constants.SUN_WSS_SECURITY_SERVER_POLICY_NS, "forTransforms"))))
-                return true;
+            return "true".equals(assertion.getAttributeValue(new QName(Constants.SUN_WSS_SECURITY_SERVER_POLICY_NS, "forTransforms")));
         }
         return false;
     }
@@ -1180,8 +927,7 @@ public class PolicyUtil {
             return false;
         }
         if ( assertion.getName().getLocalPart().equals(Constants.InclusiveC14NWithComments)) {
-            if("true".equals(assertion.getAttributeValue(new QName(Constants.SUN_WSS_SECURITY_SERVER_POLICY_NS, "forCm"))))
-                return true;
+            return "true".equals(assertion.getAttributeValue(new QName(Constants.SUN_WSS_SECURITY_SERVER_POLICY_NS, "forCm")));
         }
         return false;
     }
@@ -1190,10 +936,7 @@ public class PolicyUtil {
         if(!isSunPolicyNS(assertion)){
             return false;
         }
-        if ( assertion.getName().getLocalPart().equals(Constants.ExclusiveC14NWithComments)) {
-            return true;
-        }
-        return false;
+        return assertion.getName().getLocalPart().equals(Constants.ExclusiveC14NWithComments);
     }
 
     public static boolean isExclusiveC14NWithCommentsForTransforms(PolicyAssertion assertion ) {
@@ -1201,8 +944,7 @@ public class PolicyUtil {
             return false;
         }
         if ( assertion.getName().getLocalPart().equals(Constants.ExclusiveC14NWithComments)) {
-            if("true".equals(assertion.getAttributeValue(new QName(Constants.SUN_WSS_SECURITY_SERVER_POLICY_NS, "forTransforms"))))
-                return true;
+            return "true".equals(assertion.getAttributeValue(new QName(Constants.SUN_WSS_SECURITY_SERVER_POLICY_NS, "forTransforms")));
         }
         return false;
     }
@@ -1212,8 +954,7 @@ public class PolicyUtil {
             return false;
         }
         if ( assertion.getName().getLocalPart().equals(Constants.ExclusiveC14NWithComments)) {
-            if("true".equals(assertion.getAttributeValue(new QName(Constants.SUN_WSS_SECURITY_SERVER_POLICY_NS, "forCm"))))
-                return true;
+            return "true".equals(assertion.getAttributeValue(new QName(Constants.SUN_WSS_SECURITY_SERVER_POLICY_NS, "forCm")));
         }
         return false;
     }
@@ -1223,10 +964,7 @@ public class PolicyUtil {
             return false;
         }
 
-        if ( assertion.getName().getLocalPart().equals(Constants.STRTransform10)) {
-            return true;
-        }
-        return false;
+        return assertion.getName().getLocalPart().equals(Constants.STRTransform10);
     }
 
     public static boolean isInitiatorToken(PolicyAssertion assertion, SecurityPolicyVersion spVersion) {
@@ -1234,10 +972,7 @@ public class PolicyUtil {
             return false;
         }
 
-        if ( assertion.getName().getLocalPart().equals(Constants.InitiatorToken)) {
-            return true;
-        }
-        return false;
+        return assertion.getName().getLocalPart().equals(Constants.InitiatorToken);
     }
 
      public static boolean isInitiatorEncryptionToken(PolicyAssertion assertion, SecurityPolicyVersion spVersion) {
@@ -1245,21 +980,15 @@ public class PolicyUtil {
             return false;
         }
 
-        if ( assertion.getName().getLocalPart().equals(Constants.InitiatorEncryptionToken)) {
-            return true;
-        }
-        return false;
-    }
+         return assertion.getName().getLocalPart().equals(Constants.InitiatorEncryptionToken);
+     }
 
     public static boolean isInitiatorSignatureToken(PolicyAssertion assertion, SecurityPolicyVersion spVersion) {
         if ( !isSecurityPolicyNS(assertion, spVersion)) {
             return false;
         }
 
-        if ( assertion.getName().getLocalPart().equals(Constants.InitiatorSignatureToken)) {
-            return true;
-        }
-        return false;
+        return assertion.getName().getLocalPart().equals(Constants.InitiatorSignatureToken);
     }
 
 
@@ -1268,10 +997,7 @@ public class PolicyUtil {
             return false;
         }
 
-        if ( assertion.getName().getLocalPart().equals(Constants.RecipientToken)) {
-            return true;
-        }
-        return false;
+        return assertion.getName().getLocalPart().equals(Constants.RecipientToken);
     }
 
     public static boolean isRecipientSignatureToken(PolicyAssertion assertion, SecurityPolicyVersion spVersion) {
@@ -1279,10 +1005,7 @@ public class PolicyUtil {
             return false;
         }
 
-        if ( assertion.getName().getLocalPart().equals(Constants.RecipientSignatureToken)) {
-            return true;
-        }
-        return false;
+        return assertion.getName().getLocalPart().equals(Constants.RecipientSignatureToken);
     }
 
     public static boolean isRecipientEncryptionToken(PolicyAssertion assertion, SecurityPolicyVersion spVersion) {
@@ -1290,10 +1013,7 @@ public class PolicyUtil {
             return false;
         }
 
-        if ( assertion.getName().getLocalPart().equals(Constants.RecipientEncryptionToken)) {
-            return true;
-        }
-        return false;
+        return assertion.getName().getLocalPart().equals(Constants.RecipientEncryptionToken);
     }
 
 
@@ -1302,10 +1022,7 @@ public class PolicyUtil {
             return false;
         }
 
-        if ( assertion.getName().getLocalPart().equals(Constants.ProtectTokens)) {
-            return true;
-        }
-        return false;
+        return assertion.getName().getLocalPart().equals(Constants.ProtectTokens);
     }
 
     public static boolean isEncryptSignature(PolicyAssertion assertion, SecurityPolicyVersion spVersion) {
@@ -1313,10 +1030,7 @@ public class PolicyUtil {
             return false;
         }
 
-        if ( assertion.getName().getLocalPart().equals(Constants.EncryptSignature)) {
-            return true;
-        }
-        return false;
+        return assertion.getName().getLocalPart().equals(Constants.EncryptSignature);
     }
 
     public static boolean isCreated(PolicyAssertion assertion) {
@@ -1324,10 +1038,7 @@ public class PolicyUtil {
             return false;
         }
 
-        if ( assertion.getName().getLocalPart().equals(Constants.Created)) {
-            return true;
-        }
-        return false;
+        return assertion.getName().getLocalPart().equals(Constants.Created);
     }
 
     public static boolean isExpires(PolicyAssertion assertion) {
@@ -1335,10 +1046,7 @@ public class PolicyUtil {
             return false;
         }
 
-        if ( assertion.getName().getLocalPart().equals(Constants.Expires)) {
-            return true;
-        }
-        return false;
+        return assertion.getName().getLocalPart().equals(Constants.Expires);
     }
 
     public static boolean isSignatureToken(PolicyAssertion assertion, SecurityPolicyVersion spVersion) {
@@ -1346,11 +1054,7 @@ public class PolicyUtil {
             return false;
         }
 
-        if ( assertion.getName().getLocalPart().equals(Constants.SignatureToken)) {
-            return true;
-        }
-
-        return false;
+        return assertion.getName().getLocalPart().equals(Constants.SignatureToken);
     }
 
     public static boolean isEncryptionToken(PolicyAssertion assertion, SecurityPolicyVersion spVersion) {
@@ -1358,10 +1062,7 @@ public class PolicyUtil {
             return false;
         }
 
-        if ( assertion.getName().getLocalPart().equals(Constants.EncryptionToken)) {
-            return true;
-        }
-        return false;
+        return assertion.getName().getLocalPart().equals(Constants.EncryptionToken);
     }
 
     public static boolean isProtectionToken(PolicyAssertion assertion, SecurityPolicyVersion spVersion) {
@@ -1369,10 +1070,7 @@ public class PolicyUtil {
             return false;
         }
 
-        if ( assertion.getName().getLocalPart().equals(Constants.ProtectionToken)) {
-            return true;
-        }
-        return false;
+        return assertion.getName().getLocalPart().equals(Constants.ProtectionToken);
     }
 
     public static boolean isAddress(PolicyAssertion assertion ) {
@@ -1380,11 +1078,7 @@ public class PolicyUtil {
             return false;
         }
 
-        if ( assertion.getName().getLocalPart().equals(Constants.Address)) {
-            return true;
-        }
-
-        return false;
+        return assertion.getName().getLocalPart().equals(Constants.Address);
     }
 
     public static boolean isAddressingMetadata(final PolicyAssertion assertion) {
@@ -1392,10 +1086,7 @@ public class PolicyUtil {
             return false;
         }
 
-        if ( assertion.getName().getLocalPart().equals(Constants.Metadata)) {
-            return true;
-        }
-        return false;
+        return assertion.getName().getLocalPart().equals(Constants.Metadata);
     }
 
     public static boolean isMetadata(final PolicyAssertion assertion ) {
@@ -1403,11 +1094,7 @@ public class PolicyUtil {
             return false;
         }
 
-        if ( assertion.getName().getLocalPart().equals(Constants.Metadata)) {
-            return true;
-        }
-
-        return false;
+        return assertion.getName().getLocalPart().equals(Constants.Metadata);
     }
 
     public static boolean isMetadataSection(final PolicyAssertion assertion) {
@@ -1415,11 +1102,7 @@ public class PolicyUtil {
             return false;
         }
 
-        if ( assertion.getName().getLocalPart().equals(Constants.MetadataSection)) {
-            return true;
-        }
-
-        return false;
+        return assertion.getName().getLocalPart().equals(Constants.MetadataSection);
     }
 
     public static boolean isMetadataReference(final PolicyAssertion assertion) {
@@ -1427,11 +1110,7 @@ public class PolicyUtil {
             return false;
         }
 
-        if ( assertion.getName().getLocalPart().equals(Constants.MetadataReference)) {
-            return true;
-        }
-
-        return false;
+        return assertion.getName().getLocalPart().equals(Constants.MetadataReference);
     }
 
     public static boolean isRequestSecurityTokenTemplate(PolicyAssertion assertion, SecurityPolicyVersion spVersion) {
@@ -1439,10 +1118,7 @@ public class PolicyUtil {
             return false;
         }
 
-        if ( assertion.getName().getLocalPart().equals(Constants.RequestSecurityTokenTemplate)) {
-            return true;
-        }
-        return false;
+        return assertion.getName().getLocalPart().equals(Constants.RequestSecurityTokenTemplate);
     }
 
     public static boolean isRequireExternalUriReference(PolicyAssertion assertion, SecurityPolicyVersion spVersion) {
@@ -1450,11 +1126,7 @@ public class PolicyUtil {
             return false;
         }
 
-        if ( assertion.getName().getLocalPart().equals(Constants.RequireExternalUriReference)) {
-            return true;
-        }
-
-        return false;
+        return assertion.getName().getLocalPart().equals(Constants.RequireExternalUriReference);
     }
 
     public static boolean isRequireExternalReference(PolicyAssertion assertion, SecurityPolicyVersion spVersion) {
@@ -1462,11 +1134,7 @@ public class PolicyUtil {
             return false;
         }
 
-        if ( assertion.getName().getLocalPart().equals(Constants.RequireExternalReference)) {
-            return true;
-        }
-
-        return false;
+        return assertion.getName().getLocalPart().equals(Constants.RequireExternalReference);
     }
 
     public static boolean isRequireInternalReference(PolicyAssertion assertion, SecurityPolicyVersion spVersion) {
@@ -1474,11 +1142,7 @@ public class PolicyUtil {
             return false;
         }
 
-        if ( assertion.getName().getLocalPart().equals(Constants.RequireInternalReference)) {
-            return true;
-        }
-
-        return false;
+        return assertion.getName().getLocalPart().equals(Constants.RequireInternalReference);
     }
 
     public static boolean isEndpointReference(PolicyAssertion assertion) {
@@ -1486,10 +1150,7 @@ public class PolicyUtil {
             return false;
         }
 
-        if ( assertion.getName().getLocalPart().equals(Constants.EndpointReference)) {
-            return true;
-        }
-        return false;
+        return assertion.getName().getLocalPart().equals(Constants.EndpointReference);
     }
 
     public static boolean isLax(PolicyAssertion assertion, SecurityPolicyVersion spVersion) {
@@ -1497,10 +1158,7 @@ public class PolicyUtil {
             return false;
         }
 
-        if ( assertion.getName().getLocalPart().equals(Constants.Lax)) {
-            return true;
-        }
-        return false;
+        return assertion.getName().getLocalPart().equals(Constants.Lax);
     }
 
     public static boolean isLaxTsFirst(PolicyAssertion assertion, SecurityPolicyVersion spVersion) {
@@ -1508,10 +1166,7 @@ public class PolicyUtil {
             return false;
         }
 
-        if ( assertion.getName().getLocalPart().equals(Constants.LaxTsFirst)) {
-            return true;
-        }
-        return false;
+        return assertion.getName().getLocalPart().equals(Constants.LaxTsFirst);
     }
 
     public static boolean isLaxTsLast(PolicyAssertion assertion, SecurityPolicyVersion spVersion) {
@@ -1519,10 +1174,7 @@ public class PolicyUtil {
             return false;
         }
 
-        if ( assertion.getName().getLocalPart().equals(Constants.LaxTsLast)) {
-            return true;
-        }
-        return false;
+        return assertion.getName().getLocalPart().equals(Constants.LaxTsLast);
     }
 
     public static boolean isStrict(PolicyAssertion assertion, SecurityPolicyVersion spVersion) {
@@ -1530,10 +1182,7 @@ public class PolicyUtil {
             return false;
         }
 
-        if ( assertion.getName().getLocalPart().equals(Constants.Strict)) {
-            return true;
-        }
-        return false;
+        return assertion.getName().getLocalPart().equals(Constants.Strict);
     }
 
     public static boolean isKeyType(PolicyAssertion assertion) {
@@ -1541,11 +1190,7 @@ public class PolicyUtil {
             return false;
         }
 
-        if ( assertion.getName().getLocalPart().equals(Constants.KeyType)) {
-            return true;
-        }
-
-        return false;
+        return assertion.getName().getLocalPart().equals(Constants.KeyType);
     }
 
     public static boolean isKeySize(PolicyAssertion assertion) {
@@ -1553,11 +1198,7 @@ public class PolicyUtil {
             return false;
         }
 
-        if ( assertion.getName().getLocalPart().equals(Constants.KeySize)) {
-            return true;
-        }
-
-        return false;
+        return assertion.getName().getLocalPart().equals(Constants.KeySize);
     }
 
     public static boolean isUseKey(PolicyAssertion assertion) {
@@ -1565,11 +1206,7 @@ public class PolicyUtil {
             return false;
         }
 
-        if ( assertion.getName().getLocalPart().equals(Constants.UseKey)) {
-            return true;
-        }
-
-        return false;
+        return assertion.getName().getLocalPart().equals(Constants.UseKey);
     }
 
     public static boolean isEncryption(PolicyAssertion assertion) {
@@ -1577,10 +1214,7 @@ public class PolicyUtil {
             return false;
         }
 
-        if ( assertion.getName().getLocalPart().equals(Constants.Encryption)) {
-            return true;
-        }
-        return false;
+        return assertion.getName().getLocalPart().equals(Constants.Encryption);
     }
 
     public static boolean isProofEncryption(PolicyAssertion assertion) {
@@ -1588,10 +1222,7 @@ public class PolicyUtil {
             return false;
         }
 
-        if ( assertion.getName().getLocalPart().equals(Constants.ProofEncryption)) {
-            return true;
-        }
-        return false;
+        return assertion.getName().getLocalPart().equals(Constants.ProofEncryption);
     }
 
     public static boolean isLifeTime(PolicyAssertion assertion) {
@@ -1599,120 +1230,84 @@ public class PolicyUtil {
             return false;
         }
 
-        if ( assertion.getName().getLocalPart().equals(Constants.Lifetime)) {
-            return true;
-        }
-        return false;
+        return assertion.getName().getLocalPart().equals(Constants.Lifetime);
     }
 
     public static boolean isHeader(PolicyAssertion assertion, SecurityPolicyVersion spVersion) {
         if ( !isSecurityPolicyNS(assertion, spVersion)) {
             return false;
         }
-        if ( assertion.getName().getLocalPart().equals(Constants.HEADER)) {
-            return true;
-        }
-        return false;
+        return assertion.getName().getLocalPart().equals(Constants.HEADER);
     }
 
     public static boolean isRequireKeyIR(PolicyAssertion assertion, SecurityPolicyVersion spVersion) {
         if (!isSecurityPolicyNS(assertion, spVersion)) {
             return false;
         }
-        if ( assertion.getName().getLocalPart().equals(Constants.RequireKeyIdentifierReference)) {
-            return true;
-        }
-        return false;
+        return assertion.getName().getLocalPart().equals(Constants.RequireKeyIdentifierReference);
     }
 
     public static boolean isSignWith(PolicyAssertion assertion) {
         if(!isTrustNS(assertion)){
             return false;
         }
-        if(Constants.SignWith.equals(assertion.getName().getLocalPart())){
-            return true;
-        }
-        return false;
+        return Constants.SignWith.equals(assertion.getName().getLocalPart());
     }
 
     public static boolean isEncryptWith(PolicyAssertion assertion) {
         if(!isTrustNS(assertion)){
             return false;
         }
-        if(Constants.EncryptWith.equals(assertion.getName().getLocalPart())){
-            return true;
-        }
-        return false;
+        return Constants.EncryptWith.equals(assertion.getName().getLocalPart());
     }
 
     public static boolean isRequestType(PolicyAssertion assertion) {
         if(!isTrustNS(assertion)){
             return false;
         }
-        if(Constants.RequestType.equals(assertion.getName().getLocalPart())){
-            return true;
-        }
-        return false;
+        return Constants.RequestType.equals(assertion.getName().getLocalPart());
     }
 
     public static boolean isSignatureAlgorithm(PolicyAssertion assertion) {
         if(!isTrustNS(assertion)){
             return false;
         }
-        if(Constants.SignatureAlgorithm.equals(assertion.getName().getLocalPart())){
-            return true;
-        }
-        return false;
+        return Constants.SignatureAlgorithm.equals(assertion.getName().getLocalPart());
     }
 
     public static boolean isComputedKeyAlgorithm(PolicyAssertion assertion) {
         if(!isTrustNS(assertion)){
             return false;
         }
-        if(Constants.ComputedKeyAlgorithm.equals(assertion.getName().getLocalPart())){
-            return true;
-        }
-        return false;
+        return Constants.ComputedKeyAlgorithm.equals(assertion.getName().getLocalPart());
     }
 
     public static boolean isCanonicalizationAlgorithm(PolicyAssertion assertion) {
         if(!isTrustNS(assertion)){
             return false;
         }
-        if(Constants.CanonicalizationAlgorithm.equals(assertion.getName().getLocalPart())){
-            return true;
-        }
-        return false;
+        return Constants.CanonicalizationAlgorithm.equals(assertion.getName().getLocalPart());
     }
 
     public static boolean isEncryptionAlgorithm(PolicyAssertion assertion) {
         if(!isTrustNS(assertion)){
             return false;
         }
-        if(Constants.EncryptionAlgorithm.equals(assertion.getName().getLocalPart())){
-            return true;
-        }
-        return false;
+        return Constants.EncryptionAlgorithm.equals(assertion.getName().getLocalPart());
     }
 
     public static boolean isAuthenticationType(PolicyAssertion assertion) {
         if(!isTrustNS(assertion)){
             return false;
         }
-        if(Constants.AuthenticationType.equals(assertion.getName().getLocalPart())){
-            return true;
-        }
-        return false;
+        return Constants.AuthenticationType.equals(assertion.getName().getLocalPart());
     }
 
     public static boolean isKeyWrapAlgorithm(PolicyAssertion assertion) {
         if(!Constants.TRUST13_NS.equals(assertion.getName().getNamespaceURI())){
             return false;
         }
-        if(Constants.KeyWrapAlgorithm.equals(assertion.getName().getLocalPart())){
-            return true;
-        }
-        return false;
+        return Constants.KeyWrapAlgorithm.equals(assertion.getName().getLocalPart());
     }
 
     public static boolean isSC10SecurityContextToken(PolicyAssertion assertion, SecurityPolicyVersion spVersion){
@@ -1720,30 +1315,21 @@ public class PolicyUtil {
             return false;
         }
 
-        if(assertion.getName().getLocalPart().equals(Constants.SC10SecurityContextToken)) {
-            return true;
-        }
-        return false;
+        return assertion.getName().getLocalPart().equals(Constants.SC10SecurityContextToken);
     }
 
     public static boolean isConfigPolicyAssertion(PolicyAssertion assertion){
         String uri = assertion.getName().getNamespaceURI();
-        if(Constants.SUN_SECURE_CLIENT_CONVERSATION_POLICY_NS.equals(uri) || Constants.SUN_TRUST_CLIENT_SECURITY_POLICY_NS.equals(uri) ||
+        return Constants.SUN_SECURE_CLIENT_CONVERSATION_POLICY_NS.equals(uri) || Constants.SUN_TRUST_CLIENT_SECURITY_POLICY_NS.equals(uri) ||
                 Constants.SUN_SECURE_SERVER_CONVERSATION_POLICY_NS.equals(uri) || Constants.SUN_TRUST_SERVER_SECURITY_POLICY_NS.equals(uri) ||
-                Constants.SUN_WSS_SECURITY_CLIENT_POLICY_NS.equals(uri) || Constants.SUN_WSS_SECURITY_SERVER_POLICY_NS.equals(uri) ){
-            return true;
-        }
-        return false;
+                Constants.SUN_WSS_SECURITY_CLIENT_POLICY_NS.equals(uri) || Constants.SUN_WSS_SECURITY_SERVER_POLICY_NS.equals(uri);
     }
 
     public static boolean isTrustTokenType(PolicyAssertion assertion) {
         if(!isTrustNS(assertion)){
             return false;
         }
-        if(Constants.TokenType.equals(assertion.getName().getLocalPart())){
-            return true;
-        }
-        return false;
+        return Constants.TokenType.equals(assertion.getName().getLocalPart());
     }
 
     public static boolean isPortType(PolicyAssertion assertion) {
@@ -1751,10 +1337,7 @@ public class PolicyUtil {
             return false;
         }
 
-        if ( assertion.getName().getLocalPart().equals(Constants.PortType)) {
-            return true;
-        }
-        return false;
+        return assertion.getName().getLocalPart().equals(Constants.PortType);
     }
 
     public  static boolean isReferenceParameters(PolicyAssertion assertion) {
@@ -1762,10 +1345,7 @@ public class PolicyUtil {
             return false;
         }
 
-        if ( assertion.getName().getLocalPart().equals(Constants.ReferenceParameters)) {
-            return true;
-        }
-        return false;
+        return assertion.getName().getLocalPart().equals(Constants.ReferenceParameters);
     }
 
     public static boolean isReferenceProperties(PolicyAssertion assertion) {
@@ -1773,10 +1353,7 @@ public class PolicyUtil {
             return false;
         }
 
-        if ( assertion.getName().getLocalPart().equals(Constants.ReferenceProperties)) {
-            return true;
-        }
-        return false;
+        return assertion.getName().getLocalPart().equals(Constants.ReferenceProperties);
     }
 
     public static boolean isServiceName(PolicyAssertion assertion) {
@@ -1784,10 +1361,7 @@ public class PolicyUtil {
             return false;
         }
 
-        if ( assertion.getName().getLocalPart().equals(Constants.ServiceName)) {
-            return true;
-        }
-        return false;
+        return assertion.getName().getLocalPart().equals(Constants.ServiceName);
     }
 
     public static boolean isRequiredElements(PolicyAssertion assertion, SecurityPolicyVersion spVersion){
@@ -1795,30 +1369,21 @@ public class PolicyUtil {
             return false;
         }
 
-        if(assertion.getName().getLocalPart().equals(Constants.RequiredElements)){
-            return true;
-        }
-        return false;
+        return assertion.getName().getLocalPart().equals(Constants.RequiredElements);
     }
 
     public static boolean isClaimsElement(PolicyAssertion assertion){
         if(!isTrustNS(assertion)){
             return false;
         }
-        if(Constants.Claims.equals(assertion.getName().getLocalPart())){
-            return true;
-        }
-        return false;
+        return Constants.Claims.equals(assertion.getName().getLocalPart());
     }
 
     public static boolean isEntropyElement(PolicyAssertion assertion){
         if(!isTrustNS(assertion)){
             return false;
         }
-        if(Constants.Entropy.equals(assertion.getName().getLocalPart())){
-            return true;
-        }
-        return false;
+        return Constants.Entropy.equals(assertion.getName().getLocalPart());
     }
 
 
@@ -1827,10 +1392,7 @@ public class PolicyUtil {
             return false;
         }
 
-        if(assertion.getName().getLocalPart().equals(Constants.NoPassword)){
-            return true;
-        }
-        return false;
+        return assertion.getName().getLocalPart().equals(Constants.NoPassword);
     }
 
     public static boolean isHashPassword(PolicyAssertion assertion, SecurityPolicyVersion spVersion){
@@ -1838,17 +1400,13 @@ public class PolicyUtil {
             return false;
         }
 
-        if(assertion.getName().getLocalPart().equals(Constants.HashPassword) &&
-                assertion.getName().getNamespaceURI().equals(SecurityPolicyVersion.SECURITYPOLICY12NS.namespaceUri)){
-            return true;
-        }
-        return false;
+        return assertion.getName().getLocalPart().equals(Constants.HashPassword) &&
+                assertion.getName().getNamespaceURI().equals(SecurityPolicyVersion.SECURITYPOLICY12NS.namespaceUri);
     }
 
     public static String randomUUID() {
          UUID uid = UUID.randomUUID();
-         String id= "uuid_" + uid;
-         return id;
+        return "uuid_" + uid;
     }
 
     public static byte[] policyAssertionToBytes(final PolicyAssertion token){
@@ -1857,8 +1415,8 @@ public class PolicyUtil {
             XMLOutputFactory xof = XMLOutputFactory.newInstance();
             XMLStreamWriter writer = xof.createXMLStreamWriter(baos);
 
-            AssertionSet set = AssertionSet.createAssertionSet(Arrays.asList(token));
-            Policy policy = Policy.createPolicy(Arrays.asList(set));
+            AssertionSet set = AssertionSet.createAssertionSet(List.of(token));
+            Policy policy = Policy.createPolicy(List.of(set));
             PolicySourceModel sourceModel = ModelGenerator.getGenerator().translate(policy);
             PolicyModelMarshaller pm = PolicyModelMarshaller.getXmlMarshaller(true);
             pm.marshal(sourceModel, writer);
@@ -1877,9 +1435,8 @@ public class PolicyUtil {
             DocumentBuilderFactory dbf = WSITXMLFactory.createDocumentBuilderFactory(WSITXMLFactory.DISABLE_SECURE_PROCESSING);
             dbf.setNamespaceAware(true);
             DocumentBuilder db = dbf.newDocumentBuilder();
-            Document doc = db.parse(new ByteArrayInputStream(byteArray));
 
-            return doc;
+            return db.parse(new ByteArrayInputStream(byteArray));
         }catch (Exception e){
             throw new WebServiceException(e);
         }
